# lindroid-piperwire

./: .gitignore  CMakeLists.txt  lindroid.conf  module-lindroid.c
debian/: changelog  control  dirs  files  install  rules
